# ADME-Tox-Predictor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  LAUNCH.html  OPTIMIZATION_RULES.md  README.md  SESSION_RESUME.md  TEST_RESULTS.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_train.py  start.bat  start_simple.bat  test_predict.py  test_streamlit.py
.streamlit/: config.toml
agents/: .env.example  README.md  config.yml  coordinator.py  requirements.txt  setup.py  start.bat
api/: main.py  schemas.py
data/: datasets_info.json  herg_chembl.json
deploy/: Makefile  nginx.conf
investor_kit/: competitive_positioning.md  investor_brief.md  investor_memo.md  metrics_dashboard.json  strategy_from_bioptic.md
landing/: index.html
models/: ames_model.json  bioavailability_model.json  bioavailability_model.py  caco2_model.json  caco2_model.py  checksums.txt  herg_expanded_model.json  herg_expanded_model.py  herg_model.json  herg_model.py  herg_results.json  pgp_model.json  pgp_model.py  ppbr_model.json  ppbr_model.py
promo/: ADMET_Predictor_Executive_Summary.pptx  ADMET_Predictor_Investor_Pitch.pptx  ADMET_Predictor_Investors_RU.pptx  generate_article_charts.py  generate_charts.py  generate_executive_summary.py  generate_pptx.py  generate_pptx_ru.py  investor_presentation.md  metrics_summary.json
src/: auth.py  chembl_downloader.py  config.py  data_loader.py  endpoints.py  expand_herg.py  export_models.py  feature_importance.py  features.py  gnn.py  gnn_features.py  hybrid_model.py  i18n.py  (+7 more)
(+71 files in other folders)
