[project]
name = "admetox"
version = "2.0.0"
description = "AI-powered ADME/Tox prediction for drug discovery"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py314"
line-length = 120
extend-exclude = ["models/*.py"]

[tool.ruff.lint]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore:.*X does not have valid feature names.*:UserWarning",
    "ignore:.*MorganGenerator.*:DeprecationWarning",
    "ignore:.*Setting the shape on a NumPy array.*:DeprecationWarning",
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning",
    "ignore:.*Using.*httpx.*with.*starlette.*:DeprecationWarning",
]
